--- a/absurdle-react/src/index.css
+++ b/absurdle-react/src/index.css
@@ -11,10 +11,24 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
-.helpbox{
+@media(max-height:420px) {
+  .game .lbox {
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+}
+
+@media(max-width:260px) {
+  .game .lbox {
+    font-size: 1rem;
+    line-height: 1rem;
+  }
+}
+
+.helpbox {
   display: flex;
   border-radius: 5px;
-  background:  #fff;
+  background: #fff;
   margin-top: auto;
   margin-bottom: auto;
   height: 100%;
@@ -44,7 +58,7 @@ body {
   width: 100%;
   padding: 5px;
   border-radius: 5px;
-    max-width: 600px;
+  max-width: 600px;
 }
 
 
@@ -60,29 +74,32 @@ body {
   color: rgb(31, 31, 31);
 }
 
-.title{
-  display:flex;
+.title {
+  display: flex;
   margin-left: auto;
   margin-right: auto;
 }
 
 .button {
-cursor: pointer;}
+  cursor: pointer;
+}
 
-.keyboard{
+.keyboard {
   display: flex;
   flex-direction: column;
-  height:auto;
+  height: auto;
+  /* max-height: 20%; */
 }
 
-.key-row{
-    display: flex;
-    flex-direction: row;
+.key-row {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  height: auto;
 }
 
-.letter{
+.letter {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -93,86 +110,93 @@ cursor: pointer;}
   text-transform: uppercase;
   font-size: 12px;
   font-family: inherit;
-  height: 55px;
+  height: min(55px, 6vh);
+  /* height: 55px; */
   width: 45px;
   user-select: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.letter.large{
-    width: 70px;
+.letter.large {
+  width: 70px;
 
 }
 
-.board-container{
+.board-container {
   display: flex;
-  /* justify-content: center; */
-  align-items: center;
-  flex-grow: 1;
-  margin-top: auto;
-  margin-bottom: auto;
-  height: auto;
-  width: 100%;
-  overflow-x:clip;
-  overflow-y: auto;
-}
-.board{
-
-  margin-top: auto;
-  margin-bottom: auto;
-  display: flex;
-  flex-direction: column;
-  height:fit-content;
-  width: 100%;
-}
-.word{
-  display: flex;
+  justify-content: center;
   flex-direction: row;
   align-items: center;
-  justify-content: center;
-  height: 100%;
-  width: 100%;
 }
 
-.lbox{
+.board {
+  display: grid;
+  grid-template-rows: repeat(6, 1fr);
+  grid-gap: 3px;
+  padding: 10px;
+  box-sizing: border-box;
+  max-height: 432px;
+  max-width: 360px;
+  width: 360px;
+}
+
+.word-container {
+  display: block;
+}
+
+.word {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 3px;
+  /* max-height: 10%; */
+  /* max-height: 55px; */
+}
+
+.lbox-container {
+  display: block;
+  animation: none;
+  /* max-width: 55px; */
+}
+
+.lbox {
   display: flex;
+  /* width: 100%;
+  height: 100%; */
   justify-content: center;
   align-items: center;
+  font-size: 2rem;
+  line-height: 1.5rem;
+  text-transform: uppercase;
+  user-select: none;
+  text-size-adjust: auto;
+  /* aspect-ratio: 1; */
+  /* max-height: 75px; */
+
   background: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   border: 2px solid rgb(236, 236, 236);
-  margin: 2px;
-  padding: 5px 5px;
-  text-align: center;
-  text-transform: uppercase;
-  /* text-anchor: middle; */
-  font-size: 30px;
-  font-family: inherit;
-  height: 65px;
-  width: 65px;
-  user-select: none;
 }
 
-.lbox.full{
-    border-color: rgb(122, 122, 122);
+.lbox.full {
+  border-color: rgb(122, 122, 122);
 }
 
-.lbox.full.invalid{
-  background-color:rgb(122, 122, 122);
+.lbox.full.invalid {
+  background-color: rgb(122, 122, 122);
   color: #fff;
 }
 
-.lbox.full.misplaced{
-  background-color:rgb(200, 200, 90);
-  border-color:rgb(200, 200, 90);
-    color: #fff;
+.lbox.full.misplaced {
+  background-color: rgb(200, 200, 90);
+  border-color: rgb(200, 200, 90);
+  color: #fff;
 }
 
-.lbox.full.correct{
+.lbox.full.correct {
   background-color: rgb(87, 187, 87);
   border-color: rgb(87, 187, 87);
-    color: #fff;
+  color: #fff;
 }
 
 footer {
